--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   },
   "dependencies": {
     "next": "10.2.3",
+    "postcss-nested": "^5.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.0",
+    "tailwindcss": "^2.1.3"
   }
 }
