--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "lodash.merge": "^4.6.2",
     "next": "10.2.3",
     "postcss-nested": "^5.0.5",
     "react": "17.0.2",
