--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "lodash.merge": "^4.6.2",
     "next": "10.2.3",
+    "p-wait-for": "3.0.0",
     "postcss-nested": "^5.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2"
